--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
-   <groupId>Twitter-Kafka-Producer-Project</groupId>
-   <artifactId>Twitter-Kafka-Producer-Project</artifactId>
+   <groupId>com.kafka.twitter</groupId>
+   <artifactId>Twitter-Kafka-Producer</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>
-   <name>Twitter-Kafka-Producer-Project</name>
+   <name>Twitter-Kafka-Producer</name>
    <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
