--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.kafka.twitter</groupId>
-   <artifactId>Twitter-Kafka-Producer</artifactId>
+   <artifactId>kafka-Scala-Streaming</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>
-   <name>Twitter-Kafka-Producer</name>
+   <name>kafka-Strom-Streaming</name>
    <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
